# opensim-task-space

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.org
cmake/: CMakeHelpers.cmake  readme.md
data/: readme.md  setup.ini
data/dataset/: readme.md
data/dataset/gait/: 3DGaitModel2354_BodyKinematics_acc_global.sto  3DGaitModel2354_BodyKinematics_pos_global.sto  3DGaitModel2354_BodyKinematics_vel_global.sto  readme.md  subject01_walk1Tran.trc  subject01_walk1_adjusted.trc  subject01_walk1_grf.xml  subject01_walk1_simulated.sto  subject01_walk1_simulated.trc  walk_adjusted.xlsx
data/dataset/gait/Gait2354_Simbody/: subject01_Setup_Analysis.xml  subject01_Setup_CMC.xml  subject01_Setup_IK.xml  subject01_walk1_grf.xml  subject01_walk1_ik.mot
data/dataset/gait/Gait2354_Simbody/Analysis/: Gait2354_scaled_Kinematics_dudt.sto  Gait2354_scaled_Kinematics_q.sto  Gait2354_scaled_Kinematics_u.sto
data/dataset/gait/Gait2354_Simbody/ResultsCMC/: subject01_walk1_Actuation_force.sto  subject01_walk1_Actuation_power.sto  subject01_walk1_Actuation_speed.sto  subject01_walk1_Kinematics_dudt.sto  subject01_walk1_Kinematics_q.sto  subject01_walk1_Kinematics_u.sto  subject01_walk1_pErr.sto
data/models/MoBL_NoTremor/: MoBL_ARMS_Upper_Limb_NoTremor_v2.osim  MoBL_ARMS_Upper_Limb_NoTremor_v3.osim  MoBL_ARMS_module3_samemuscles.osim  MoBL_ARMS_module3_samemuscles_pathact.osim
data/models/absolute_coordinates/: absolute_coordinates.osim
data/models/closed_kinematic_chain/: closed_kinematic_chain.osim
data/models/gait_model/: gait2354_simbody_scaled.osim  gait2354_simbody_scaled2.osim  gait2354_simbody_scaled_femur.osim  gait2354_simbody_scaled_femur_l.osim  gait2354_simbody_scaled_lft.osim  gait2354_simbody_scaled_lftc.osim  gait2354_simbody_scaled_lpf.osim  gait2354_simbody_scaled_lpft.osim  gait2354_simbody_scaled_lpftc.osim  gait2354_simbody_scaled_path_act.osim  gait2354_simbody_scaled_pelvis_femur.osim  gait2354_simbody_scaled_pftc.osim  gait2354_simbody_scaled_tibia_l.osim  gait2392_simbody_scaled_jump.osim  gait2392_simbody_scaled_jump_f.osim  gait2392_simbody_scaled_jump_t.osim  markers.xml
data/models/gait_model/batch/: gait2354_simbody_scaled_1.osim  gait2354_simbody_scaled_3.osim  gait2354_simbody_scaled_5.osim  readme.md
dependencies/: CMakeLists.txt  readme.md
matlab/: readme.md
matlab/printSimulationResults/: absolute_coordinates_results.m  closed_kinematic_chain_results.m  cmc_tscmc_results.m  findStr.m  ik_batch_results.m  plotAnalytics.m  plotControls.m  plotCoordinates.m  plotStationPointAnalysis.m  plotTaskForces.m  reaching_results.m  readMotionFile.m  saveFigure.m  tsdik_debug.m
src/: CMakeLists.txt
src/examples/: AbsoluteCoordinates.cpp  CMakeLists.txt  CloseKinematicChain.cpp  ReachingSimulation.cpp  TSIKBatch.cpp  TaskSpaceComputedMuscleControl.cpp  TaskSpaceInverseKinematics.cpp  Template.cpp
src/includes/: Settings.h.in  tree.h
src/muscleoptimization/: CMakeLists.txt  MuscleOptimization.cpp  MuscleOptimization.h  MuscleOptimizationTarget.cpp  MuscleOptimizationTarget.h  readme.md
src/muscleoptimization/internal/: MuscleOptimizationDLL.h
src/numbersystems/: Bezier.cpp  Bezier.h  CMakeLists.txt  Complex.cpp  Complex.h  Octonion.cpp  Octonion.h  Quaternion.cpp  Quaternion.h  Sedenion.cpp  Sedenion.h  Slerp.cpp  Slerp.h  Spline.cpp  Spline.h  Support.cpp  Support.h  Trigintaduonion.cpp  Trigintaduonion.h
src/numbersystems/internal/: NumberSystemsDLL.h
src/opensimutil/: CMakeLists.txt  ConstantAngleConstraint.h  ConstraintAnalysis.cpp  ConstraintAnalysis.h  OpenSimUtil.cpp  OpenSimUtil.h  StationPointAnalysis.cpp  StationPointAnalysis.h
src/opensimutil/internal/: OpenSimUtilDLL.h
src/taskspace/: AbstractPrimitive.cpp  AbstractPrimitive.h  CMakeLists.txt  ConstraintModel.cpp  ConstraintModel.h  DynamicCompensator.cpp  DynamicCompensator.h  TaskBasedController.cpp  TaskBasedController.h  TaskBasedForce.cpp  TaskBasedForce.h  TaskDynamics.cpp  TaskDynamics.h  TaskPrimitive.cpp  TaskPrimitive.h  TaskPriorityGraph.cpp  TaskPriorityGraph.h  TaskTrackingController.cpp  TaskTrackingController.h  readme.md
src/taskspaceik/: CMakeLists.txt  IKTaskData.cpp  IKTaskData.h  IKTaskManager.cpp  IKTaskManager.h  IKTrackingTask.cpp  IKTrackingTask.h  MarkerErrorAnalysis.cpp  MarkerErrorAnalysis.h  MarkerPositionAnalysis.cpp  MarkerPositionAnalysis.h  TaskSpaceInverseKinematics.cpp  TaskSpaceInverseKinematics.h  readme.md
src/taskspaceik/internal/: TaskSpaceIKDLL.h
src/taskspacemc/: CMakeLists.txt  MuscleBasedController.cpp  MuscleBasedController.h  TaskSpaceComputedMuscleControl.cpp  TaskSpaceComputedMuscleControl.h  readme.md
src/taskspacemc/internal/: TaskSpaceMCDLL.h
src/util/: CMakeLists.txt  CommonUtil.cpp  CommonUtil.h  INIReader.cpp  INIReader.h
src/util/internal/: Ini.h  UtilDLL.h
src/util/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
